--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,31 @@
 <resources>
     <string name="app_name">BikeLog</string>
+    <string name="action_settings">settings</string>
+    <string name="action_example">settings</string>
+    <string name="title_activity_location">title_activity_location</string>
+    <!-- General Strings all start with gs_<name> -->
+    <string name="gs_ok">OK</string>
+    <string name="gs_yes">YES</string>
+    <string name="gs_no">NO</string>
+    <string name="gs_quit">QUIT</string>
+    <string name="gs_save">SAVE</string>
+    <string name="gs_close">CLOSE</string>
+    <!-- Welcome Screen Strings all start with ws_<name> -->
+    <string name="ws_title">Welcome to BikeLog App</string>
+    <string name="ws_label_about">About</string>
+    <string name="ws_about">This application will save your activity
+    progress and will let you upload to your preferred applications
+    such as endomondo, strava etc and keep you safe in the process!</string>
+    <string name="ws_label_disclaimer">Disclaimer</string>
+    <string name="ws_disclaimer">This is a disclaimer!</string>
+    <string name="ws_button">I Understand and Want to Continue</string>
+    <string name="ws_quit">Are you sure you want to quit and give up already?</string>
+    <!-- Settings Screen Strings all start with ss_<name> -->
+    <string name="ss_title">BikeLog User Profile</string>
+    <string name="ss_hint_name">Your Name Here</string>
+    <string name="ss_hint_phone">SOS Phone Number Here</string>
+    <string name="ss_hint_message">Your rescue message here!</string>
+    <string name="ss_default_message">Please help me, im in trouble! Here are my coordinates:</string>
 
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
-    <string name="title_section4">Section 4</string>
-
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-
-    <string name="action_example">Example action</string>
-
-    <string name="action_settings">Settings</string>
-    <string name="title_activity_location">LocationActivity</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
