--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,5 +33,5 @@
     <string name="ss_hint_updateInterval">Update interval (seconds) here!</string>
     <string name="ss_checkbox_text">Autoupdate location</string>
 
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment">Hello activity fragment</string>
 </resources>
